# solarmask

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
solarmask/: exceptions.py  utils.py
solarmask/ar/: __init__.py  active_region.py  fields.py  parameters.py  segments.py
solarmask/facade/: drms.py
solarmask/meta/: network.py
solarmask/network/: testing.py
solarmask/sharp_cea_720s_nrt/: __init__.py  file_locator.py
solarmask/sharp_cea_720s_nrt/meta/: local.py  network.py
solarmask/sharp_cea_720s_nrt/segments/: caching_repository.py  local.py  network.py
tests/: test_smoketest.py
