[project]
name = "solarmask_lincketheo"
version = "0.0.1"
authors = [
  { name="Theo Lincke", email="lincketheo@gmail.com" },
]
description = "A math package for analyzing solar data from drms sun data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lincketheo/solarmask"
Issues = "https://github.com/lincketheo/solarmask/issues"

